# Catch2_minimial_example_cmake_3_18

./: .gitignore  CMakeLists.txt  test_yes.cpp
